--- a/xx/xx/MainPage.xaml
+++ b/xx/xx/MainPage.xaml
@@ -2,9 +2,13 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:xx"
+             xmlns:localTemplates="clr-namespace:xx.Templates"
+             xmlns:converters="clr-namespace:xx.Converters"
              BackgroundColor="#FF0C154F"
              x:Class="xx.MainPage">
-
+    <ContentPage.Resources>
+        <converters:ListViewSelectedColorConverter x:Key="ListViewSelectedColorConverter"/>
+    </ContentPage.Resources>
     <ContentPage.Padding>
         <OnPlatform x:TypeArguments="Thickness"
                 iOS="20, 40, 20, 20"
@@ -34,30 +38,60 @@
                             <ColumnDefinition Width="100"/>
                             <ColumnDefinition Width="220"/>
                         </Grid.ColumnDefinitions>
-                        <Grid Grid.Column="0" WidthRequest="80" HeightRequest="30" HorizontalOptions="Center">
+                        <Grid Grid.Column="0" WidthRequest="80" HeightRequest="40" HorizontalOptions="Center">
                             <Button Text="1" x:FieldModifier="public" Clicked="Button_Clicked" BackgroundColor="Green"  FontSize="Default"  TextColor="White"  FontAttributes="Bold" />
                         </Grid>
-                        <Grid Grid.Column="1" WidthRequest="180" HeightRequest="30" HorizontalOptions="Center" BackgroundColor="Transparent">
+                        <Grid Grid.Column="1" WidthRequest="180" HeightRequest="40" HorizontalOptions="Center" BackgroundColor="White">
                             <Editor Grid.Row="0" x:Name="txtEdit1" x:FieldModifier="public" IsReadOnly="True" TextColor="Red" HorizontalOptions="Fill" VerticalOptions="Fill"/>
                         </Grid>
                     </Grid>
-                
             </StackLayout>
-                
-                <!--<Button Margin="10,50,200,0" Text="Download Image" Clicked="DownloadClicked" />-->
+            </StackLayout>
+            <StackLayout  x:FieldModifier="public" IsVisible="true" HorizontalOptions="CenterAndExpand" Margin="0,90,0,0">
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="100"/>
+                        <ColumnDefinition Width="220"/>
+                    </Grid.ColumnDefinitions>
+                    <Grid Grid.Column="1" WidthRequest="180" HeightRequest="40" HorizontalOptions="Center"  BackgroundColor="Yellow">
+                        <Editor Grid.Row="0" x:Name="txtEdit3" x:FieldModifier="public" TextChanged="txtEdit3_TextChanged"  TextColor="Black" HorizontalOptions="Fill" VerticalOptions="Fill" Completed="OnEnterPressed" />
+                    </Grid>
 
-        </StackLayout>
-            <StackLayout  x:Name="stkTeine" x:FieldModifier="public" IsVisible="false" HorizontalOptions="CenterAndExpand">
-                <Button Text="2"  Clicked="Button2_Clicked" Margin="10,50,122,0" BackgroundColor="Blue"  FontSize="Default"  TextColor="White"  FontAttributes="Bold" />
-                <Grid Grid.Row="2" BackgroundColor="Gray">
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="*"/>
-                    </Grid.RowDefinitions>
-                    <Editor Grid.Row="0" x:Name="txtEdit2" TextColor="Red" HorizontalOptions="Fill" VerticalOptions="Fill"/>
                 </Grid>
             </StackLayout>
-        <StackLayout  x:Name="stkUpdate" x:FieldModifier="public" IsVisible="false" HorizontalOptions="CenterAndExpand">
+           
+        
+            <StackLayout  x:FieldModifier="public" IsVisible="true" HorizontalOptions="CenterAndExpand" Margin="0,120,0,0">
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="100"/>
+                        <ColumnDefinition Width="220"/>
+                    </Grid.ColumnDefinitions>
+                    <Grid Grid.Column="0" WidthRequest="80" HeightRequest="40" HorizontalOptions="Center">
+                        <RadioButton Text="Production" />
+                    </Grid>
+                    <Grid Grid.Column="1" WidthRequest="180" HeightRequest="40" HorizontalOptions="Center">
+                        <RadioButton Text="Test" />
+                    </Grid>
+                    
+                    
+                </Grid>
 
+            </StackLayout>
+         <StackLayout  x:FieldModifier="public" IsVisible="true" HorizontalOptions="CenterAndExpand" Margin="0,170,0,0" BackgroundColor="White" >
+                <ListView x:FieldModifier="public"  x:Name="LstvSettings" WidthRequest="322" HeightRequest="100" Margin="0,20,0,0"  SelectionMode="Single" ItemTapped="LstvSettings_ItemTapped"  />
+            </StackLayout>
+            
+        <StackLayout  x:Name="stkTeine" x:FieldModifier="public" IsVisible="false" HorizontalOptions="CenterAndExpand">
+            <Button Text="2"  Clicked="Button2_Clicked" Margin="10,50,122,0" BackgroundColor="Blue"  FontSize="Default"  TextColor="White"  FontAttributes="Bold" />
+            <Grid Grid.Row="2" BackgroundColor="Gray">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="*"/>
+                </Grid.RowDefinitions>
+                <Editor Grid.Row="0" x:Name="txtEdit2" TextColor="Red" HorizontalOptions="Fill" VerticalOptions="Fill"/>
+            </Grid>
+            </StackLayout>
+        <StackLayout  x:Name="stkUpdate" x:FieldModifier="public" IsVisible="false" HorizontalOptions="CenterAndExpand">
         <StackLayout  x:FieldModifier="public" IsVisible="true" HorizontalOptions="CenterAndExpand" Margin="0,0,0,0">
           <Grid Grid.Row="2">
             <Grid.ColumnDefinitions>
