--- a/xx/xx/App.xaml
+++ b/xx/xx/App.xaml
@@ -3,6 +3,61 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="xx.App">
     <Application.Resources>
-       
+        <ResourceDictionary>
+          <OnPlatform x:TypeArguments="x:String" x:Key="FaRegular">
+            <On Platform="Android" Value="FontAwesome5Regular.otf#Font Awesome Regular" />
+            <On Platform="UWP" Value="Assets/FontAwesome5Regular.otf#Font Awesome 5 Free" />
+          </OnPlatform>
+
+          <OnPlatform x:TypeArguments="x:String" x:Key="FaSolid">
+            <On Platform="Android" Value="FontAwesome5Solid.otf#Font Awesome Solid" />
+            <On Platform="UWP" Value="Assets/FontAwesome5Solid.otf#Font Awesome 5 Free" />
+          </OnPlatform>
+
+          <OnPlatform x:TypeArguments="x:String" x:Key="FaBrands">
+            <On Platform="Android" Value="FontAwesome5Brands.otf#Font Awesome Brands" />
+            <On Platform="UWP" Value="Assets/FontAwesome5Brands.otf#Font Awesome 5 Brands" />
+          </OnPlatform>
+
+            <Style TargetType="Button" x:Key="KeyboardButtonStyle">
+                <Setter Property="FontSize" Value="{OnPlatform Android=Large, UWP=Medium}" />
+                <Setter Property="BackgroundColor" Value="#FF343232" />
+                <Setter Property="TextColor" Value="White" />
+                <Setter Property="HeightRequest" Value="46" />
+                <Setter Property="BorderWidth" Value="1" />
+                <Setter Property="BorderColor" Value="Gray" />
+            </Style>
+            <Style TargetType="Button" x:Key="KeyboardButtonGrayStyle">
+                <Setter Property="FontSize" Value="{OnPlatform Android=Large, UWP=Medium}" />
+                <Setter Property="BackgroundColor" Value="Gray" />
+                <Setter Property="TextColor" Value="White" />
+                <Setter Property="HeightRequest" Value="46" />
+                <Setter Property="BorderWidth" Value="1" />
+                <Setter Property="BorderColor" Value="Gray" />
+            </Style>
+            <Style TargetType="Button" x:Key="KeyboardButtonCloseStyle">
+                <Setter Property="FontSize" Value="{OnPlatform Android=Large, UWP=Medium}" />
+                <Setter Property="BackgroundColor" Value="Transparent" />
+                <Setter Property="TextColor" Value="Red" />
+                <Setter Property="HeightRequest" Value="46" />
+            </Style>
+            <Style TargetType="Button" x:Key="KeyboardButtonAddOnButtonStyle">
+                <Setter Property="FontSize" Value="{OnPlatform Android=Large, UWP=Medium}" />
+                <Setter Property="BackgroundColor" Value="Transparent" />
+                <Setter Property="TextColor" Value="White" />
+                <Setter Property="HeightRequest" Value="46" />
+            </Style>
+
+            <Style TargetType="Entry" x:Key="ReadOnlyEntryStyle">
+                <Setter Property="FontSize" Value="{OnPlatform Android=Large, UWP=Medium}" />
+                <Setter Property="BackgroundColor" Value="White" />
+                <Setter Property="TextColor" Value="Black" />
+                <Setter Property="HorizontalOptions" Value="Fill" />
+                <Setter Property="VerticalOptions" Value="Fill" />
+                <Setter Property="IsReadOnly" Value="{OnPlatform Android=False, UWP=True}" />
+            </Style>
+
+
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
