--- a/xx/xx/App.xaml
+++ b/xx/xx/App.xaml
@@ -19,22 +19,26 @@
             <On Platform="UWP" Value="Assets/FontAwesome5Brands.otf#Font Awesome 5 Brands" />
           </OnPlatform>
 
-            <Style TargetType="Button" x:Key="KeyboardButtonStyle">
-                <Setter Property="FontSize" Value="{OnPlatform Android=Large, UWP=Medium}" />
+            <Style TargetType="Button" x:Key="KeyboardButtonNumericStyle">
+                <Setter Property="FontSize" Value="{OnPlatform Android=Large, UWP=Small}" />
                 <Setter Property="BackgroundColor" Value="#FF343232" />
                 <Setter Property="TextColor" Value="White" />
                 <Setter Property="HeightRequest" Value="46" />
                 <Setter Property="BorderWidth" Value="1" />
                 <Setter Property="BorderColor" Value="Gray" />
             </Style>
-            <Style TargetType="Button" x:Key="KeyboardButtonGrayStyle">
-                <Setter Property="FontSize" Value="{OnPlatform Android=Large, UWP=Medium}" />
-                <Setter Property="BackgroundColor" Value="Gray" />
+
+            <Style TargetType="Button" x:Key="KeyboardButtonStyle">
+                <Setter Property="FontSize" Value="{OnPlatform Android=Large, UWP=Default}" />
+                <Setter Property="BackgroundColor" Value="#FF343232" />
                 <Setter Property="TextColor" Value="White" />
                 <Setter Property="HeightRequest" Value="46" />
+                <Setter Property="WidthRequest" Value="22" />
                 <Setter Property="BorderWidth" Value="1" />
                 <Setter Property="BorderColor" Value="Gray" />
+                <Setter Property="Padding" Value="-10"></Setter>
             </Style>
+
             <Style TargetType="Button" x:Key="KeyboardButtonCloseStyle">
                 <Setter Property="FontSize" Value="{OnPlatform Android=Large, UWP=Medium}" />
                 <Setter Property="BackgroundColor" Value="Transparent" />
@@ -57,7 +61,7 @@
                 <Setter Property="IsReadOnly" Value="{OnPlatform Android=False, UWP=True}" />
             </Style>
 
-
+            
         </ResourceDictionary>
     </Application.Resources>
 </Application>
